add pwa, firebase init, fix name

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,5 @@
 {
-    "name": "ngvite",
+    "name": "Angly Vite",
     "integrations": {},
     "type": "angular-standalone",
     "id": "com.simplybest.ngvite"
